--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -17,8 +17,8 @@
                             <h1 class="q-title-show">{{ question }}</h1>
                             <div class="q-display p-3">
                                 <i class="fa fa-quote-left mr-3"></i>
-                                <p class="d-inline">Dlaczego kwadrat ma 4 kąty?</p>
-                                <p class="pt-4"><strong>--Wercyn</strong></p>
+                                <p class="d-inline">{{ questionText|raw }}</p>
+                                <p class="pt-4"><strong>--{{ questionAuthor|raw }}</strong></p>
                             </div>
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                         <img src="{{ asset('images/tisha.png') }}" width="50" height="50">
                     </div>
                     <div class="mr-3 pt-2">
-                        {{ answer }}
+                        {{ answer|markdown }}
                         <p>-- Wercyn</p>
                     </div>
                     <div class="vote-arrows flex-fill pt-2 js-vote-arrows" style="min-width: 90px;">
